--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "react-w5",
+  "name": "react-w6",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://0707Felix.github.io/React_W5_FrontDeskInfo",
+  "homepage": "https://0707Felix.github.io/React_W6_React-Router/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -18,7 +18,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
-    "react-loading": "^2.0.3"
+    "react-loading": "^2.0.3",
+    "react-router-dom": "^6.29.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
